# mp4-to-jpg_click

./: .gitignore  LICENSE  README.md  mp4-to-jpg.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi_publisher.yml
mp4_to_jpg/: mp4_to_jpg.py
src/mp4_to_jpg_click/: __init__.py  mp4_to_jpg.py
