[project]
name = "mp4-to-jpg-click"
version = "1.2.1"
description = "A CLI tool to extract frames from MP4/MOV videos with intelligent frame skipping and duplicate detection"
authors = [{ name = "tadeasf", email = "business@tadeasfort.com" }]
dependencies = [
    "imagededup>=0.3.1",
    "opencv-python>=4.10.0.84",
    "imagehash>=4.3.1",
    "pillow>=11.0.0",
    "loguru>=0.7.2",
    "tqdm>=4.66.5",
    "rich-click>=1.8.3",
    "prompt-toolkit>=3.0.48",
]
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"
keywords = ["video", "frame extraction", "mp4", "jpg", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/tadeasf/mp4-to-jpg-click"
Repository = "https://github.com/tadeasf/mp4-to-jpg-click"

[project.scripts]
mp4-to-jpg = "mp4_to_jpg_click.mp4_to_jpg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mp4_to_jpg_click"]
